-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 17, 18, 19
-
Component/s: hotspot
-
b12
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8284408 | 18.0.2 | Tobias Hartmann | P3 | Resolved | Fixed | b03 |
| JDK-8284126 | 17.0.4-oracle | Tobias Hartmann | P3 | Resolved | Fixed | b02 |
| JDK-8284150 | 17.0.4 | Martin Doerr | P3 | Resolved | Fixed | b01 |
| JDK-8285892 | 11.0.16 | Roland Westrelin | P3 | Resolved | Fixed | b01 |
- test compiler/c2/TestCMoveHasTopInput.java with -XX:+UseShenandoahGC
```
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/jvm/jdk/src/hotspot/share/opto/type.hpp:1782), pid=95812, tid=95826
# assert(_base == Tuple) failed: Not a Tuple
#
Current CompileTask:
C2: 1264 12 b TestCMoveHasTopInput::vMeth (97 bytes)
Stack: [0x00007fef5ea1d000,0x00007fef5eb1e000], sp=0x00007fef5eb184c0, free space=1005k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x13b01ad] ProjNode::proj_type(Type const*) const [clone .part.31]+0x3d
V [libjvm.so+0x14dab9e] PhaseIterGVN::transform_old(Node*)+0x2be
V [libjvm.so+0x14d538d] PhaseIterGVN::optimize()+0x7d
V [libjvm.so+0x9ec49a] PhaseIdealLoop::optimize(PhaseIterGVN&, LoopOptsMode)+0x2da
V [libjvm.so+0x16e09fc] ShenandoahBarrierC2Support::expand(Compile*, PhaseIterGVN&)+0x6c
V [libjvm.so+0x1618f4f] ShenandoahBarrierSetC2::expand_barriers(Compile*, PhaseIterGVN&) const+0xf
V [libjvm.so+0x9e9a1e] Compile::Optimize()+0x10ae
V [libjvm.so+0x9eb5dc] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x193c
V [libjvm.so+0x83e707] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x407
V [libjvm.so+0x9f8849] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xbf9
V [libjvm.so+0x9f9418] CompileBroker::compiler_thread_loop()+0x508
V [libjvm.so+0x183f7de] JavaThread::thread_main_inner()+0x2fe
V [libjvm.so+0x183fa71] JavaThread::run()+0x231
V [libjvm.so+0x1845ed6] Thread::call_run()+0xf6
V [libjvm.so+0x1458e99] thread_native_entry(Thread*)+0x109
```
- backported by
-
JDK-8284126 assert(_base == Tuple) failed: Not a Tuple after JDK-8280799
-
- Resolved
-
-
JDK-8284150 assert(_base == Tuple) failed: Not a Tuple after JDK-8280799
-
- Resolved
-
-
JDK-8284408 assert(_base == Tuple) failed: Not a Tuple after JDK-8280799
-
- Resolved
-
-
JDK-8285892 assert(_base == Tuple) failed: Not a Tuple after JDK-8280799
-
- Resolved
-
- relates to
-
JDK-8280799 С2: assert(false) failed: cyclic dependency prevents range check elimination
-
- Resolved
-
- links to
-
Commit
openjdk/jdk11u-dev/d896abb1
-
Commit
openjdk/jdk17u-dev/cdf144ed
-
Commit
openjdk/jdk18u/8f3c8899
-
Commit
openjdk/jdk/fcce24c5
-
Review
openjdk/jdk11u-dev/1049
-
Review
openjdk/jdk17u-dev/320
-
Review
openjdk/jdk18u/90
-
Review
openjdk/jdk/7494