8281811: assert(_base == Tuple) failed: Not a Tuple after JDK-8280799

Reviewed-by: kvn, thartmann